# muscle3

./: .bettercodehub.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Doxyfile  MANIFEST.in  Makefile  NOTICE  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  temp.sh  tox.ini
.github/workflows/: cffconvert.yml  ci.yaml  ci_macos11_clang.yaml  ci_macos11_gcc_gfortran.yaml  (+38 more)
docs/: requirements.txt
integration_test/: conftest.py  include_libmuscle.py  test_all.py  test_base_env.py  test_broadcast.py  test_cluster.Dockerfile  test_cluster.py  test_coordination_api.py  test_cpp_logging.py  test_cpp_macro_micro.py  test_cpp_mmp_client.py  test_cpp_mpp_client.py  test_cpp_tcp_client.py  test_cpp_tcp_reconnect.py  test_cpp_tcp_server.py  test_crash_cleanup.py  test_deadlock_detection.py  test_duplication_mapper.py  test_dynamic_ports.py  test_fortran_macro_micro.py  test_logging.py  test_macro_micro.py  test_model_imports.py  test_mpi_macro_micro.py  test_multicast.py  test_multicast_cpp.py  test_muscle_tester_macro_micro.py  test_nested.py  test_parameter_overlays.py  test_python_tcp_reconnect.py  test_registration.py  test_snapshot_complex_coupling.py  test_snapshot_dispatch.py  test_snapshot_interact.py  test_snapshot_macro_micro.py  test_start_all.py  test_start_mpi.py  test_start_nested.py  test_start_script.py  test_version.py
libmuscle/cpp/: CMakeLists.txt  Makefile  get_deps.sh
libmuscle/cpp/scripts/: FindGRPC.cmake  FindMUSCLE3.cmake  FindYMMSL.cmake  build_googletest.cmake.in  build_grpc.cmake.in  googletest.cmake  libprotobuf_pic.patch
libmuscle/cpp/src/: CMakeLists.txt  muscle3.hpp  tooling.cpp  tooling.hpp  version.h.in
libmuscle/cpp/src/libmuscle/: api_guard.cpp  api_guard.hpp  checkpoint_triggers.cpp  checkpoint_triggers.hpp  close_port.cpp  close_port.hpp  communicator.cpp  communicator.hpp  data.cpp  data.hpp  data.tpp  endpoint.cpp  endpoint.hpp  instance.cpp  instance.hpp  instance.tpp  libmuscle.hpp  logger.cpp  logger.hpp  logger.tpp  logging.cpp  logging.hpp  mark.cpp  mark.hpp  message.cpp  message.hpp  mmp_client.cpp  mmp_client.hpp  mmsf_validator.cpp  mmsf_validator.hpp  mpi_tcp_barrier.cpp  mpi_tcp_barrier.hpp  mpp_client.cpp  mpp_client.hpp  mpp_message.cpp  mpp_message.hpp  mpp_server.cpp  mpp_server.hpp  namespace.hpp  operator.cpp  (+35 more)
libmuscle/cpp/src/libmuscle/bindings/: cmdlineargs.cpp  cmdlineargs.hpp  libmuscle_fortran_c.cpp  libmuscle_mpi_fortran_c.cpp
libmuscle/cpp/src/libmuscle/mcp/: client.cpp  client.hpp  data.cpp  data.hpp  data.tpp  data_pack.cpp  data_pack.hpp  data_pack.tpp  ext_types.hpp  message.cpp  message.hpp  protocol.hpp  rpc_state.cpp  rpc_state.hpp  server.cpp  server.hpp  session_state.cpp  session_state.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp  tcp_transport_client.cpp  tcp_transport_client.hpp  tcp_transport_server.cpp  tcp_transport_server.hpp  tcp_util.cpp  tcp_util.hpp  transport_client.cpp  transport_client.hpp  transport_server.cpp  transport_server.hpp
libmuscle/cpp/src/libmuscle/tests/: component_test.cpp  crashing_component_test.cpp  dynamic_macro_test.cpp  fixtures.hpp  fortran_micro_model_test.f03  macro_model_test.cpp  micro_macro_model_test.hpp  micro_model_test.cpp  mmp_client_test.cpp  mpi_component_test.cpp  mpi_micro_model_test.cpp  mpi_snapshot_micro_test.cpp  mpp_client_test.cpp  snapshot_components_test.cpp  tcp_client_test.cpp  tcp_reconnect_test.cpp  tcp_server_test.cpp  tcp_transport_server_test.cpp  test_api_guard.cpp  test_checkpoint_triggers.cpp  test_communicator.cpp  test_data.cpp  test_data_memory_use.cpp  test_fortran_api.f03  test_instance.cpp  test_logger.cpp  test_mcp_data.cpp  test_mcp_message.cpp  test_mmsf_validator.cpp  test_mpp_message.cpp  test_mpp_server.cpp  test_operator.cpp  test_outbox.cpp  test_peer_info.cpp  test_peer_manager.cpp  test_port.cpp  test_port_manager.cpp  test_post_office.cpp  test_profiler.cpp  test_settings_manager.cpp  (+5 more)
libmuscle/cpp/src/libmuscle/tests/mocks/: mock_api_guard.hpp  mock_communicator.cpp  mock_communicator.hpp  mock_encoded_message.hpp  mock_logger.cpp  mock_logger.hpp  mock_mmp_client.cpp  mock_mmp_client.hpp  mock_mpp_client.cpp  mock_mpp_client.hpp  mock_mpp_server.hpp  mock_peer_info.cpp  mock_peer_info.hpp  mock_peer_manager.cpp  mock_peer_manager.hpp  mock_port_manager.hpp  mock_post_office.cpp  mock_post_office.hpp  mock_profiler.cpp  mock_profiler.hpp  mock_settings_manager.hpp  mock_snapshot_manager.hpp  mock_support.hpp  mock_trigger_manager.hpp
libmuscle/cpp/src/libmuscle/tests/mocks/mcp/: mock_tcp_client.cpp  mock_tcp_client.hpp  mock_tcp_server.cpp  mock_tcp_server.hpp  mock_tcp_transport_server.cpp  mock_tcp_transport_server.hpp
libmuscle/cpp/src/muscle_manager_protocol/: muscle_manager_protocol.grpc.pb.cc  muscle_manager_protocol.grpc.pb.h  muscle_manager_protocol.pb.cc  muscle_manager_protocol.pb.h
libmuscle/cpp/src/ymmsl/: component.cpp  component.hpp  compute_element.cpp  compute_element.hpp  identity.cpp  identity.hpp  model.cpp  model.hpp  settings.cpp  settings.hpp  settings.tpp  version.h  ymmsl.hpp
libmuscle/cpp/src/ymmsl/bindings/: ymmsl_fortran_c.cpp
libmuscle/cpp/src/ymmsl/tests/: main.cpp  test_component.cpp  test_compute_element.cpp  test_identity.cpp  test_model.cpp  test_settings.cpp
libmuscle/cpp/tests/: CMakeLists.txt  test_extra.cpp  test_tooling.cpp
manager_protocol/: muscle_manager_protocol.proto
muscle3/: conftest.py  model_graph_pydot.py  muscle3.py  muscle_manager.py  profiling.py
muscle_manager/: grpc_support.py  instance_registry.py  logger.py  mmp_server.py  muscle_manager.py  operator.py  topology_store.py
muscle_manager_protocol/: __init__.py  muscle_manager_protocol.proto  muscle_manager_protocol_pb2.py  muscle_manager_protocol_pb2.pyi  muscle_manager_protocol_pb2_grpc.py  muscle_manager_protocol_pb2_grpc.pyi
scripts/: Makefile  api_generator.py  convert_fortran_source.py  make_libmuscle_api.py  make_muscle_api.py  make_ymmsl_api.py
(+432 files in other folders)
